# streamlit-heroku-template

./: README.md  app.json  pyproject.toml  requirements.txt
src/: app.py
