[tool.poetry]
name = "streamlit-heroku-template"
version = "0.1.0"
description = "Template of Streamlit App deployed on Heroku"
authors = ["Siriraj Informatics and Data Innovation Center <sidata@mahidol.ac.th>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.4.0"
watchdog = "^2.1.5"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[yapf]
column_limit = 120
use_tabs = true
dedent_closing_brackets = true
coalesce_brackets = true
join_multiple_lines = true 
split_all_top_level_comma_separated_values = false
split_before_bitwise_operator = false
split_before_closing_bracket = false
split_before_arithmetic_operator = false
